@@ -1,2 +1,3 @@
-.build
-File-Tempdir-ForPackage-*
+/.build
+/File-Tempdir-ForPackage-*
+/tmp/
