@@ -1,6 +1,7 @@
 ; Generated by Dist::Zilla::Plugin::Author::KENTNL::DistINI version 1.4.2 at Thu Jul 26 23:07:52 2012
+; vim: syntax=dosini
 name             = File-Tempdir-ForPackage
-author           = Kent Fredric <kentfredric@gmail.com>
+author           = Kent Fredric <kentnl@cpan.org>
 license          = Perl_5
 copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
@@ -9,8 +10,7 @@ copyright_holder = Kent Fredric <kentfredric@gmail.com>
 
 [@Author::KENTNL]
 :version          = 2.016
-git_versions      = 1
-twitter_hash_tags = #perl #cpan
+; twitter_extra_hash_tags =
 normal_form       = numify
 mantissa          = 6
 toolkit           = eumm
