@@ -1,6 +1,14 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.000002
+ [Added / configure requires]
+ - perl 5.006
+
+ [Added / test requires]
+ - perl 5.006
+
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 1.000001 2014-08-15T22:56:28Z
 
@@ -36,4 +44,3 @@ This file contains changes in REQUIRED dependencies for standard CPAN phases (co
  - File::Find
 
 0.1.1 2012-07-26T14:43:40Z
-
