@@ -1,6 +1,15 @@
 This file contains changes in OPTIONAL dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.000002
+ [Added / runtime recommends]
+ - Moo 1.000008
+
+ [Changed / configure recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+
+ [Changed / test recommends]
+ - ExtUtils::MakeMaker 6.98 → 7.00
+ - Test::More 1.001003 → 0.99
 
 1.000001 2014-08-15T22:56:28Z
 
@@ -14,4 +23,3 @@ This file contains changes in OPTIONAL dependencies for standard CPAN phases (co
  - Test::More 1.001003
 
 0.1.1 2012-07-26T14:43:40Z
-
